# UNI_extractor_Neoplasic

./: README.md  pyproject.toml
model/: Dockerfile
src/UNI_extractor/: concat_tumor_stroma.py  extract_features.py  extract_tiles.py  pacpaint_neo.textClipping  process_wsi.py
